--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         applicationId "com.qianmo.retrofittest"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -20,17 +20,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.4.2'
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.android.support:design:25.0.0'
-    compile 'com.android.support:support-v4:25.0.0'
-    compile 'com.android.support:support-vector-drawable:25.0.0'
-    compile 'com.android.support:recyclerview-v7:25.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    testImplementation 'junit:junit:4.12'
+    api 'com.google.code.gson:gson:2.7'
+    api 'com.squareup.retrofit2:retrofit:2.1.0'
+    api 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    api 'com.squareup.okhttp3:okhttp-urlconnection:3.4.2'
+    api 'io.reactivex:rxandroid:1.2.1'
+    api 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    api 'com.android.support:design:26.1.0'
+    api 'com.android.support:support-v4:26.1.0'
+    api 'com.android.support:support-vector-drawable:26.1.0'
+    api 'com.android.support:recyclerview-v7:26.1.0'
+    api 'com.squareup.retrofit2:converter-gson:2.1.0'
 }
