--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     api 'com.android.support:support-vector-drawable:26.1.0'
     api 'com.android.support:recyclerview-v7:26.1.0'
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
